SVEND timeregistrering pr. projekt, ADMIN 403 fix, CSRF guard i templates, validering af projektnavn

--- a/src/main/resources/templates/edit-project.html
+++ b/src/main/resources/templates/edit-project.html
@@ -63,9 +63,11 @@
 
     <div class="form-container">
       <form th:action="@{/admin/projects/{id}/edit(id=${project.id})}" method="post" th:object="${project}">
+        <input th:if="${_csrf != null}" type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
         <div class="form-group">
           <label for="name">Projektnavn *</label>
           <input type="text" id="name" th:field="*{name}" required/>
+          <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color:#f44336;font-size:12px;margin-top:6px;"></div>
         </div>
 
         <div class="form-group">
@@ -125,4 +127,3 @@
 </div>
 </body>
 </html>
-
