--- a/src/main/resources/templates/admin-dashboard.html
+++ b/src/main/resources/templates/admin-dashboard.html
@@ -13,6 +13,7 @@
       <li><a href="#" class="active">Oversigt</a></li>
       <li><a th:href="@{/admin/projects}">Projekter</a></li>
       <li><a th:href="@{/admin/employees}">Medarbejdere</a></li>
+      <li><a th:href="@{/admin/orders}">Bestillinger</a></li>
       <li><a th:href="@{/admin/settings}">Indstillinger</a></li>
       <li><a th:href="@{/logout}" class="logout">Log ud</a></li>
     </ul>
