--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -65,6 +65,7 @@
             <a th:href="@{/admin/projects/{id}/edit(id=${project.id})}" class="btn-small">Rediger</a>
             <a th:href="@{/admin/projects/{id}/assign(id=${project.id})}" class="btn-small" style="background-color: #2196F3;">Tildel</a>
             <form th:action="@{/admin/projects/{id}/delete(id=${project.id})}" method="post" style="display: inline;">
+              <input th:if="${_csrf != null}" type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
               <button type="submit" class="btn-small" style="background-color: #f44336;" 
                       onclick="return confirm('Er du sikker på at du vil slette dette projekt?')">Slet</button>
             </form>
@@ -77,4 +78,3 @@
 </div>
 </body>
 </html>
-
